--- a/Algo_2025_2/Algo_2025_2.vcxproj.filters
+++ b/Algo_2025_2/Algo_2025_2.vcxproj.filters
@@ -15,28 +15,31 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="1-2.c">
+    <ClCompile Include="1-2 자료구조복습.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="1-1.c">
+    <ClCompile Include="1-1 자료구조복습.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2-1.c">
+    <ClCompile Include="2-1 선택정렬.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2-2.c">
+    <ClCompile Include="2-2 삽입정렬.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="2-3.c">
+    <ClCompile Include="2-3 선택vs삽입.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="3-1.c">
+    <ClCompile Include="3-1 순차힙.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="3-2.c">
+    <ClCompile Include="3-2 최대힙.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="4-1.c">
+    <ClCompile Include="4-1 힙정렬 유일키.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="4-2. 힙정렬 중복키.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
