--- a/Algo_2025_2/Algo_2025_2.vcxproj
+++ b/Algo_2025_2/Algo_2025_2.vcxproj
@@ -125,6 +125,9 @@
   <ItemGroup>
     <ClCompile Include="1-1 자료구조복습.c" />
     <ClCompile Include="1-2 자료구조복습.c" />
+    <ClCompile Include="10-1. 분리연쇄법 해시테이블.c" />
+    <ClCompile Include="10-2. 개방주소법 해시테이블 선형조사.c" />
+    <ClCompile Include="10-3. 개방주소법 해시테이블 이중해싱.c" />
     <ClCompile Include="2-1 선택정렬.c" />
     <ClCompile Include="2-2 삽입정렬.c" />
     <ClCompile Include="2-3 선택vs삽입.c" />
