--- a/Algo_2025_2/Algo_2025_2.vcxproj.filters
+++ b/Algo_2025_2/Algo_2025_2.vcxproj.filters
@@ -72,19 +72,37 @@
     <ClCompile Include="7-3. AVL트리2.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10-1. 분리연쇄법 해시테이블.c">
+    <ClCompile Include="11-1.DFS.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10-2. 개방주소법 해시테이블 선형조사.c">
+    <ClCompile Include="11-2.BFS.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="10-3. 개방주소법 해시테이블 이중해싱.c">
+    <ClCompile Include="9-1. 분리연쇄법 해시테이블.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="11-1. 인접리스트.c">
+    <ClCompile Include="9-2. 개방주소법 해시테이블 선형조사.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="11-2. 인접행렬.c">
+    <ClCompile Include="9-3. 개방주소법 해시테이블 이중해싱.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10-1. 인접리스트.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="10-2. 인접행렬.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="과제3.c">
+      <Filter>소스 파일\과제</Filter>
+    </ClCompile>
+    <ClCompile Include="12-1. 방향그래프.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="13-1. Prim-Jarnik.c">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="13-2.Kruskal.c">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
